--- a/src/app/components/account/components/expense/expense-add-edit/expense-add-edit.component.html
+++ b/src/app/components/account/components/expense/expense-add-edit/expense-add-edit.component.html
@@ -9,7 +9,7 @@
       <!-- 日期&支出地点 -->
       <div class="columns">
         <div class="column col-6">
-          <dr-date [type]="'input'" [name]="'日期'" [viewType]="'day'" [initDate]="expenseDate"
+          <dr-date [type]="'input'" [name]="'日期'"  [size]="'middle'" [viewType]="'day'" [initDate]="expenseDate"
             (setDate)="onSetDate($event)"></dr-date>
         </div>
         <div class="column col-6">
