--- a/src/app/core/components/dr-date/dr-date.component.scss
+++ b/src/app/core/components/dr-date/dr-date.component.scss
@@ -81,3 +81,10 @@ i {
   color: #fff !important;
   border-color: #ccc !important;
 }
+
+
+.icon-sm {
+  font-size: .7rem;
+  height: 1.4rem;
+  padding: .05rem .3rem;
+}
