--- a/src/app/components/account/components/income/income-add-edit/income-add-edit.component.html
+++ b/src/app/components/account/components/income/income-add-edit/income-add-edit.component.html
@@ -43,11 +43,11 @@
 
     <div class="columns">
       <div class="column col-6">
-        <dr-date [type]="'input'" [name]="'开始日期'" [viewType]="'day'" [initDate]="startDate"
+        <dr-date [type]="'input'" [name]="'开始日期'" [size]="'middle'" [viewType]="'day'" [initDate]="startDate"
           (setDate)="onSetDate($event)"></dr-date>
       </div>
       <div class="column col-6">
-        <dr-date [type]="'input'" [name]="'结束日期'" [viewType]="'day'" [initDate]="endDate" (setDate)="onSetDate($event)">
+        <dr-date [type]="'input'" [name]="'结束日期'" [size]="'middle'" [viewType]="'day'" [initDate]="endDate" (setDate)="onSetDate($event)">
         </dr-date>
       </div>
       <!-- <div class="column col-4">
