--- a/src/app/components/report/components/expense/expense-detail/expense-detail.component.scss
+++ b/src/app/components/report/components/expense/expense-detail/expense-detail.component.scss
@@ -9,15 +9,13 @@ section {
   height: calc(100% - 55px);
 }
 
+.ag-theme-balham .ag-header-cell::after,
+.ag-theme-balham .ag-header-group-cell::after {
+  border-right: 0 !important;
+}
 
 
-// .ag-theme-balham .ag-header-cell::after,
-// .ag-theme-balham .ag-header-group-cell::after {
-//   border-right: 0 !important;
-// }
-
-
-// .ag-theme-balham .ag-header-cell,
-// .ag-theme-balham .ag-header-group-cell {
-//   border-right: 1px solid #b7b7b7 !important;
-// }
+.ag-theme-balham .ag-header-cell,
+.ag-theme-balham .ag-header-group-cell {
+  border-right: 1px solid #b7b7b7 !important;
+}
