--- a/src/app/components/account/components/expense/expense-add-edit/expense-add-edit.component.html
+++ b/src/app/components/account/components/expense/expense-add-edit/expense-add-edit.component.html
@@ -68,7 +68,7 @@
           </label-select>
         </div>
         <div class="columns detail">
-          <memo [title]="'备注'" [maxNumber]="500" (setMemo)="onSetMemo($event)"></memo>
+          <memo [title]="'备注'" [maxNumber]="500" [hasMemo]="memo" (setMemo)="onSetMemo($event)"></memo>
         </div>
       </fieldset>
     </form>
