--- a/src/app/components/report/components/expense/expense-detail/expense-detail.component.scss
+++ b/src/app/components/report/components/expense/expense-detail/expense-detail.component.scss
@@ -7,6 +7,7 @@ main {
 section {
   margin: 5px;
   height: calc(100% - 55px);
+  -webkit-app-region: no-drag !important;
 }
 
 .ag-theme-balham .ag-header-cell::after,
