--- a/src/app/components/account/components/expense/expense-add-edit/expense-add-edit.component.html
+++ b/src/app/components/account/components/expense/expense-add-edit/expense-add-edit.component.html
@@ -1,16 +1,15 @@
 <!--  -->
-<main >
+<main id="expense-add-edit">
   <div class="expense-book">
     <expense-book-list [expenseBookId]="expenseBookId" (setExpenseBook)="onSetExpenseBook($event)"></expense-book-list>
   </div>
-
   <section>
     <form>
       <!-- 日期&支出地点 -->
       <div class="columns">
         <div class="column col-6">
-          <dr-date [type]="'input'" [name]="'日期'" [nameShow]="true"  [size]="'middle'" [viewType]="'day'" [initDate]="expenseDate"
-            (setDate)="onSetDate($event)"></dr-date>
+          <dr-date [type]="'input'" [name]="'日期'" [nameShow]="true" [size]="'middle'" [viewType]="'day'"
+            [initDate]="expenseDate" (setDate)="onSetDate($event)"></dr-date>
         </div>
         <div class="column col-6">
           <address-select [title]="'支出地点'" [addressId]="addressId" (setAddress)="onSetAddress($event)"></address-select>
@@ -73,7 +72,7 @@
       </fieldset>
     </form>
     <div class="dr-btn-group" *ngIf="!editOrDelFlag && addFlag">
-      <button tabindex="-1" class="btn btn-primary"  (click)="addExpense()">
+      <button tabindex="-1" class="btn btn-primary" (click)="addExpense()">
         <i class="icon icon-plus"></i> 添加
       </button>
       <button tabindex="-1" class="btn btn-Secondary" (click)="reset()">
