--- a/src/app/core/components/addreess/address-select/address-select.component.html
+++ b/src/app/core/components/addreess/address-select/address-select.component.html
@@ -1,5 +1,5 @@
 <main>
-  <div class="form-item has-error">
+  <div class="form-item">
     <label class="form-label">{{title}}</label>
     <div class="has-icon-left" #addressListEle>
       <input type="text" #addressInputEle class="form-input" placeholder="请选择地点" name="address" [(ngModel)]="address"
@@ -20,6 +20,5 @@
           添加地点</button>
       </li>
     </ul>
-    <p class="form-input-hint">The option is invalid.</p>
   </div>
 </main>
