--- a/src/app/core/components/income-category/incomeCategory-select/incomeCategory-select.component.html
+++ b/src/app/core/components/income-category/incomeCategory-select/incomeCategory-select.component.html
@@ -11,8 +11,8 @@
         <li [id]="'incomeCategory_'+item.id" class="menu-item" *ngFor="let item of list" (click)="selectItem(item)">
           <a class="text-ellipsis" [class.li-selected]="incomeCategory === item.name">{{item?.name}}</a>
           <p class="add-edit">
-            <i class="icon icon-edit"></i>
-            <i class="icon icon-delete"></i>
+            <i class="icon icon-edit" (click)="edit($event,item)"></i>
+            <i class="icon icon-delete" (click)="delete($event,item)"></i>
           </p>
         </li>
         <li class="menu-item add">
