--- a/src/app/components/account/components/expense/expense-list/expense-list.component.scss
+++ b/src/app/components/account/components/expense/expense-list/expense-list.component.scss
@@ -4,7 +4,7 @@ main {
   height: 100%;
   background: #fff;
   -webkit-app-region: no-drag;
-  border: 1px solid #5755d9;
+  // border: 1px solid #5755d9;
 }
 
 ul,
