--- a/src/app/components/account/components/income/income-list/income-list.component.html
+++ b/src/app/components/account/components/income/income-list/income-list.component.html
@@ -1,6 +1,6 @@
 <main>
   <div class="month-income">
-    <dr-date [type]="'text'" [viewType]="'day'" [nameShow]="true" [name]="" [initDate]="date" (setDate)="changeDate($event)"></dr-date>
+    <dr-date [type]="'text'" [viewType]="'month'" [nameShow]="true" [name]="" [initDate]="date" (setDate)="changeDate($event)"></dr-date>
     <span>
       总计: {{incomeService?.totalMonthAmount}}元
     </span>
