--- a/src/app/components/account/components/income/income.component.scss
+++ b/src/app/components/account/components/income/income.component.scss
@@ -2,9 +2,11 @@ main {
   display: flex;
   height: calc(100% - 12px);
 
+
   .dynamic-component {
     width: 245px;
     margin: 10px 5px 0 0;
     height: 100%;
+    border: 1px solid #5755d9;
   }
 }
