--- a/src/app/core/components/addreess/address-add-edit/address-add-edit.component.html
+++ b/src/app/core/components/addreess/address-add-edit/address-add-edit.component.html
@@ -1,42 +1,46 @@
 <main>
-  <p>添加地址</p>
+  <div class="header-panel">
+    {{data?'编辑':'添加'}}地址
+  </div>
   <form>
-    <div>
+    <div class="form-group">
       <label>省/直辖市</label>
-      <select name="province" [ngModel]="province" (ngModelChange)="selectProvince($event)">
+      <select class="form-select" name="province" [ngModel]="province" (ngModelChange)="selectProvince($event)">
         <option value="">--请选择省或直辖市--</option>
         <option *ngFor="let item of addressData" [value]="item.name">{{item?.name}}</option>
       </select>
     </div>
-    <div>
+    <div class="form-group">
       <label>市/直辖市</label>
-      <select name="city" [ngModel]="city" (ngModelChange)="selectCity($event)">
+      <select class="form-select" name="city" [ngModel]="city" (ngModelChange)="selectCity($event)">
         <option value="">--请选择市或直辖市--</option>
         <option *ngFor="let item of cityList" [value]="item.name">{{item?.name}}</option>
       </select>
     </div>
-    <div>
+    <div class="form-group">
       <label>区/县级市/县</label>
-      <select name="area" [(ngModel)]="area">
+      <select class="form-select" name="area" [(ngModel)]="area">
         <option value="">--请选择区或县级市或县--</option>
         <option *ngFor="let item of areaList" [value]="item.name">{{item?.name}}</option>
       </select>
     </div>
 
-    <div style="flex-direction: row;">
-      <input type="checkbox" name="isCurrenLive" [(ngModel)]="isCurrenLive">
-      <label>是否当前居住地</label>
+    <div class="form-group">
+      <label class="form-switch">
+        <input type="checkbox" name="isCurrenLive" [(ngModel)]="isCurrenLive">
+        <i class="form-icon"></i> 是否当前居住地
+      </label>
     </div>
 
-    <div>
+    <div class="form-group">
       <label>
         备注:
       </label>
-      <textarea name="memo" [(ngModel)]="memo"></textarea>
+      <textarea class="form-input" name="memo" [(ngModel)]="memo"></textarea>
     </div>
-    <div class="btn-group">
-      <button (click)="add()">添加</button>
-      <button (click)="cancel()">取消</button>
+    <div class="form-group btn-group">
+      <button type="button" (click)="addOrEdit()" class="btn btn-primary">添 加</button>
+      <button type="button" (click)="cancel()" class="btn btn-link">取 消</button>
     </div>
   </form>
 </main>
