--- a/src/app/core/components/addreess/address-add-edit/address-add-edit.component.scss
+++ b/src/app/core/components/addreess/address-add-edit/address-add-edit.component.scss
@@ -1,12 +1,24 @@
-main {
-  div {
-    display: flex;
-    flex-direction: column;
-    margin: 10px 0;
-  }
+// main {
+//   height: 100%;
+//   .btn-group {
+//     display: flex;
+//     flex-direction: row;
+//   }
 
-  .btn-group {
-    display: flex;
-    flex-direction: row;
-  }
-}
+//   form {
+//     padding: 0 5px;
+//   }
+
+//   .header-panel {
+//     height: 44px;
+//     display: flex;
+//     background: #5755d9;
+//     border: 1px solid #5755d9;
+//     color: #fff;
+//     font-size: 15px;
+//     font-weight: bolder;
+//     padding: 0px 7px;
+//     align-items: center;
+//   }
+// }
+
