--- a/src/app/core/components/expense-category/expenseCategory-add-edit/expenseCategory-add-edit.component.html
+++ b/src/app/core/components/expense-category/expenseCategory-add-edit/expenseCategory-add-edit.component.html
@@ -1,24 +1,26 @@
 <main>
-  <p>添加支出类别</p>
+  <div class="header-panel">
+    {{data?'编辑':'添加'}}支出类别
+  </div>
   <form>
-    <div>
+    <div class="form-group">
       <label>所属账本</label>
-      <input type="text" disabled [value]="data?.name">
+      <input class="form-input" type="text" disabled [value]="expenseBook?.name">
     </div>
 
-    <div>
+    <div class="form-group">
       <label>支出类别</label>
-      <input type="text" name="name" [(ngModel)]="name">
+      <input class="form-input" type="text" name="name" [(ngModel)]="name">
     </div>
 
-    <div>
+    <div class="form-group">
       <label>备注</label>
-      <textarea name="memo" [(ngModel)]="memo"></textarea>
+      <textarea class="form-input" name="memo" [(ngModel)]="memo"></textarea>
     </div>
 
-    <div class="btn-group">
-      <button (click)="add()">添加</button>
-      <button (click)="cancel()">取消</button>
+    <div class="form-group btn-group">
+      <button type="button" (click)="addOrEdit()" class="btn btn-primary">添 加</button>
+      <button type="button" (click)="cancel()" class="btn btn-link">取 消</button>
     </div>
   </form>
 </main>
