--- a/src/app/core/components/expense-category/expenseCategory-add-edit/expenseCategory-add-edit.component.scss
+++ b/src/app/core/components/expense-category/expenseCategory-add-edit/expenseCategory-add-edit.component.scss
@@ -1,13 +1,13 @@
-main {
-    div {
-      display: flex;
-      flex-direction: column;
-      margin: 10px 0;
-    }
+// main {
+//     div {
+//       display: flex;
+//       flex-direction: column;
+//       margin: 10px 0;
+//     }
   
-    .btn-group {
-      display: flex;
-      flex-direction: row;
-    }
-  }
+//     .btn-group {
+//       display: flex;
+//       flex-direction: row;
+//     }
+//   }
   
