--- a/src/app/core/components/fund-channel/fund-channel-add-edit/fund-channel-add-edit.component.html
+++ b/src/app/core/components/fund-channel/fund-channel-add-edit/fund-channel-add-edit.component.html
@@ -1,23 +1,25 @@
 <main>
-  <p>添加资金来往渠道</p>
+  <div class="header-panel">
+    {{data?'编辑':'添加'}}资金来往渠道
+  </div>
   <form>
-    <div>
+    <div class="form-group">
       <label>
         资金来往渠道:
       </label>
-      <input type="text" name="name" [(ngModel)]="name">
+      <input type="text" class="form-input" name="name" [(ngModel)]="name">
     </div>
 
-    <div>
+    <div class="form-group">
       <label>
         备注:
       </label>
-      <textarea name="memo" [(ngModel)]="memo"></textarea>
+      <textarea class="form-input" name="memo" [(ngModel)]="memo"></textarea>
     </div>
 
-    <div class="btn-group">
-      <button (click)="add()">添加</button>
-      <button (click)="cancel()">取消</button>
+    <div class="form-group btn-group">
+      <button type="button" (click)="addOrEdit()" class="btn btn-primary">添 加</button>
+      <button type="button" (click)="cancel()" class="btn btn-link">取 消</button>
     </div>
   </form>
 </main>
