--- a/src/app/core/components/fund-party/fund-party-add-edit/fund-party-add-edit.component.html
+++ b/src/app/core/components/fund-party/fund-party-add-edit/fund-party-add-edit.component.html
@@ -1,29 +1,30 @@
 <main>
-  <p>添加资金来往方</p>
+  <div class="header-panel">
+    {{data?'编辑':'添加'}}{{title}}
+  </div>
   <form>
-    <div>
+    <div class="form-group">
       <label>资金来往方</label>
-      <input type="text" name="name" [(ngModel)]="name">
+      <input class="form-input" type="text" name="name" [(ngModel)]="name">
     </div>
 
-    <div>
+    <div class="form-group">
       <label>类别</label>
-      <select name="category" [(ngModel)]="category">
+      <select class="form-select" name="category" [(ngModel)]="category">
         <option value="">请选择类别</option>
         <option value="1">个人</option>
         <option value="2">非个人</option>
       </select>
     </div>
 
-    <div>
+    <div class="form-group">
       <label>备注</label>
-      <textarea name="memo" [(ngModel)]="memo"></textarea>
+      <textarea name="memo" class="form-input" [(ngModel)]="memo"></textarea>
     </div>
 
-
-    <div class="btn-group">
-      <button (click)="add()">添加</button>
-      <button (click)="cancel()">取消</button>
+    <div class="form-group btn-group">
+      <button type="button" (click)="addOrEdit()" class="btn btn-primary">添 加</button>
+      <button type="button" (click)="cancel()" class="btn btn-link">取 消</button>
     </div>
   </form>
 </main>
