--- a/src/app/core/components/fundAccount/fund-account-add-edit/fund-account-add-edit.component.scss
+++ b/src/app/core/components/fundAccount/fund-account-add-edit/fund-account-add-edit.component.scss
@@ -1,76 +1,66 @@
-main {
-  .input {
-    display: flex;
-    flex-direction: column;
-    margin: 10px 0;
-  }
+.form-item {
+  position: relative;
 
   ul {
-    max-height: 125px;
-    overflow-y: auto;
-    width: 100%;
     padding: 0;
-    margin: 0;
-    list-style: none;
-    z-index: 1000;
+    border-radius: .1rem .1rem 0 0;
     position: absolute;
-    box-shadow: 0 2px 4px -1px rgba(0, 0, 0, .2), 0 4px 5px 0 rgba(0, 0, 0, .14), 0 1px 10px 0 rgba(0, 0, 0, .12);
-    background: #fff;
+    width: 100%;
+    max-height: 150px;
+    overflow-x: hidden;
+    overflow-y: scroll;
 
     li {
-      height: 32px;
-      line-height: 32px;
       cursor: pointer;
-      padding: 0 10px;
       display: flex;
       align-items: center;
-
-      span {
-        margin-left: 5px;
-      }
+      font-size: 14px;
 
       &:hover {
-        background: #f5f5f5;
+        background: #f1f1fc;
+        color: #5755d9;
+
+        p {
+          display: inline-flex;
+        }
       }
     }
-  }
 
-  .select {
-    position: relative;
-
-    i {
-      position: absolute;
-      top: 6px;
-      right: 2px;
+    a {
+      flex-grow: 1;
     }
 
-    input {
-      width: 98%;
-      margin-top: 5px;
-      border: none;
-      border-bottom: 1px dashed #000;
-      height: 20px;
-      cursor: pointer;
-      text-overflow: ellipsis;
-      white-space: nowrap;
-      overflow: hidden;
+    .add {
+      position: sticky;
+      bottom: 0;
     }
 
-  }
-
-  .btn-group {
-    display: flex;
-    flex-direction: row;
-  }
-
-
-  input:disabled {
-    background-color: #fff;
-  }
-
-
-  input::-webkit-input-placeholder {
-    color: #A2ABAB;
-    font-size: 16px;
+    button {
+      width: 100%;
+      border-radius: 0;
+    }
   }
 }
+
+.li-selected {
+  background: #f1f1fc;
+  color: #5755d9;
+}
+
+
+input:disabled {
+  background-color: #fff;
+}
+
+
+input::-webkit-input-placeholder {
+  color: #A2ABAB;
+  font-size: 16px;
+}
+
+
+
+ul::-webkit-scrollbar {
+  display: none;
+}
+
