--- a/src/app/core/components/income-category/income-category-add-edit/income-category-add-edit.component.html
+++ b/src/app/core/components/income-category/income-category-add-edit/income-category-add-edit.component.html
@@ -1,20 +1,21 @@
 <main>
-    <p>添加收入类别</p>
-    <form>
-      <div>
-        <label>收入类别</label>
-        <input type="text" name="name" [(ngModel)]="name">
-      </div>
-  
-      <div>
-        <label>备注</label>
-        <textarea name="memo" [(ngModel)]="memo"></textarea>
-      </div>
-  
-      <div class="btn-group">
-        <button (click)="add()">添加</button>
-        <button (click)="cancel()">取消</button>
-      </div>
-    </form>
-  </main>
-  
+  <div class="header-panel">
+    {{data?'编辑':'添加'}}收入类别
+  </div>
+  <form>
+    <div class="form-group">
+      <label>收入类别</label>
+      <input type="text" class="form-input" name="name" [(ngModel)]="name">
+    </div>
+
+    <div class="form-group">
+      <label>备注</label>
+      <textarea name="memo" class="form-input" [(ngModel)]="memo"></textarea>
+    </div>
+
+    <div class="form-group btn-group">
+      <button type="button" (click)="addOrEdit()" class="btn btn-primary">添 加</button>
+      <button type="button" (click)="cancel()" class="btn btn-link">取 消</button>
+    </div>
+  </form>
+</main>
