--- a/src/app/components/account/components/income/income-add-edit/income-add-edit.component.html
+++ b/src/app/components/account/components/income/income-add-edit/income-add-edit.component.html
@@ -44,12 +44,13 @@
 
     <div class="columns">
       <div class="column col-6">
-        <dr-date [type]="'input'" [name]="'开始日期'" [nameShow]="true" [size]="'middle'" [viewType]="'day'"
-          [initDate]="startDate" (setDate)="onSetDate($event)"></dr-date>
+        <dr-date [type]="'input'" name="startDate" [dateName]="'开始日期'" [nameShow]="true" [size]="'middle'" [viewType]="'day'"
+          [ngModel]="startDate" (ngModelChange)="onSetDate($event)"></dr-date>
       </div>
       <div class="column col-6">
-        <dr-date [type]="'input'" [name]="'结束日期'" [nameShow]="true" [size]="'middle'" [viewType]="'day'"
-          [initDate]="endDate" (setDate)="onSetDate($event)">
+        <!-- [initDate]="endDate" (setDate)="onSetDate($event)" -->
+        <dr-date [type]="'input'" name="endDate" [dateName]="'结束日期'" [nameShow]="true" [size]="'middle'" [viewType]="'day'"
+          [ngModel]="endDate" (ngModelChange)="onSetDate($event)">
         </dr-date>
       </div>
       <!-- <div class="column col-4">
