--- a/src/app/components/account/components/expense/expense-add-edit/expense-add-edit.component.html
+++ b/src/app/components/account/components/expense/expense-add-edit/expense-add-edit.component.html
@@ -1,20 +1,21 @@
-<!--  -->
 <main id="expense-add-edit">
   <div class="expense-book">
     <expense-book-list name="expenseBook" [ngModel]="expenseBookId" (ngModelChange)="onSetExpenseBook($event)">
     </expense-book-list>
   </div>
   <section>
-    <form #expenseForm="ngForm">
+    <form>
       <!-- 日期&支出地点 -->
       <div class="columns">
         <div class="column col-6">
-          <dr-date [type]="'input'" [name]="'日期'" [nameShow]="true" [size]="'middle'" [viewType]="'day'"
-            [initDate]="expenseDate" (setDate)="onSetDate($event)"></dr-date>
+          <dr-date [type]="'input'" [dateName]="'日期'" [nameShow]="true" [size]="'middle'" [viewType]="'day'"
+            name="expenseDate" [ngModel]="expenseDate" (ngModelChange)="onSetDate($event)"></dr-date>
         </div>
-        <div class="column col-6">
+        <!-- <div class="column col-6 has-error"> -->
+        <div class="column col-6 has-error">
           <address-select name="address" [title]="'支出地点'" [(ngModel)]="addressId">
           </address-select>
+          <!-- <p class="form-input-hint">支出地点不能为空</p> -->
         </div>
       </div>
 
@@ -72,20 +73,19 @@
       </fieldset>
     </form>
     <div class="dr-btn-group" *ngIf="!editOrDelFlag && addFlag">
-      <button tabindex="-1" class="btn btn-primary" (click)="addExpense()">
+      <button tabindex="-1" type="button" class="btn btn-primary" (click)="addExpense()">
         <i class="icon icon-plus"></i> 添加
-        <p *ngIf="!expenseForm.valid">Counter is invalid!</p>
       </button>
-      <button tabindex="-1" class="btn btn-Secondary" (click)="reset()">
+      <button tabindex="-1" type="button" class="btn btn-Secondary" (click)="reset()">
         <i class="icon icon-refresh"></i> 重置
       </button>
     </div>
     <div class="edit-del" *ngIf="editOrDelFlag && !addFlag">
       <div class="dr-btn-group">
-        <button tabindex="-1" class="btn btn-primary" (click)="editExpense()">
+        <button tabindex="-1" type="button" class="btn btn-primary" (click)="editExpense()">
           <i class="icon icon-edit"></i> 编辑
         </button>
-        <button tabindex="-1" class="btn btn-error" (click)="delExpense()">
+        <button tabindex="-1" type="button" class="btn btn-error" (click)="delExpense()">
           <i class="icon icon-delete"></i> 删除
         </button>
       </div>
