--- a/src/app/components/account/components/expense/expense-add-edit/expense-add-edit.component.html
+++ b/src/app/components/account/components/expense/expense-add-edit/expense-add-edit.component.html
@@ -8,16 +8,12 @@
       <!-- 日期&支出地点 -->
       <div class="columns">
         <div class="column col-6">
-          <!--  name="expenseDate" [ngModel]="expenseDate" (ngModelChange)="onSetDate($event)" -->
           <dr-date [type]="'input'" [dateName]="'日期'" [nameShow]="true" [size]="'middle'" [viewType]="'day'"
             formControlName="expenseDate"></dr-date>
         </div>
         <!-- <div class="column col-6 has-error"> -->
         <div class="column col-6"
           [class.has-error]="expenseForm.get('address').errors && (expenseForm.get('address').dirty || expenseForm.get('address').touched)">
-          <!-- <address-select name="address" [title]="'支出地点'" [(ngModel)]="addressId">
-          </address-select> -->
-          <!-- (ngModelChange)="test($event)" -->
           <address-select formControlName="address" [(ngModel)]="expenseDetail.addressId"  [title]="'支出地点'">
           </address-select>
           <p class="form-input-hint"
@@ -30,8 +26,6 @@
       <div class="columns">
         <div class="column col-6"
           [class.has-error]="expenseForm.get('expenseCategory').errors && (expenseForm.get('expenseCategory').dirty || expenseForm.get('expenseCategory').touched)">
-          <!-- <expenseCategory-select [title]="'类别'" name="expenseCategory" [expenseBook]="expenseBook"
-            [(ngModel)]="expenseCategoryId"></expenseCategory-select> -->
           <expenseCategory-select [title]="'类别'" formControlName="expenseCategory" [expenseBook]="expenseBook"
             [(ngModel)]="expenseDetail.expenseCategoryId">
           </expenseCategory-select>
@@ -43,8 +37,6 @@
         </div>
         <div class="column col-6"
           [class.has-error]="expenseForm.get('fundParty').errors && (expenseForm.get('fundParty').dirty || expenseForm.get('fundParty').touched)">
-          <!-- <fund-party-select name="fund-party" [title]="'商家'" [type]="1" name="fund-party" [(ngModel)]="fundPartyId">
-          </fund-party-select> -->
           <fund-party-select formControlName="fundParty" [(ngModel)]="expenseDetail.fundPartyId" [title]="'商家'"
             [type]="1">
           </fund-party-select>
@@ -59,7 +51,6 @@
       <div class="columns">
         <div class="column col-6"
           [class.has-error]="expenseForm.get('fundChannel').errors && (expenseForm.get('fundChannel').dirty || expenseForm.get('fundChannel').touched)">
-          <!-- <fundChannel-select name="fundChannel" [title]="'渠道'" [(ngModel)]="fundChannelId"></fundChannel-select> -->
           <fundChannel-select formControlName="fundChannel" [(ngModel)]="expenseDetail.fundChannelId" [title]="'渠道'">
           </fundChannel-select>
           <p class="form-input-hint"
@@ -69,10 +60,8 @@
         </div>
         <div class="column col-6"
           [class.has-error]="expenseForm.get('fundAccount').errors && (expenseForm.get('fundAccount').dirty || expenseForm.get('fundAccount').touched)">
-          <!-- <fund-account-select name="fund-account" [title]="'账户'" [fundChannelId]="fundChannelId" [filterCredit]="false"
-            [(ngModel)]="fundAccountId"> -->
           <fund-account-select formControlName="fundAccount" [title]="'账户'"
-            [fundChannelId]="expenseDetail.fundChannelId" [(ngModel)]="fundAccountId" [filterCredit]="false">
+            [fundChannelId]="expenseDetail.fundChannelId" [(ngModel)]="expenseDetail.fundAccountId" [filterCredit]="false">
           </fund-account-select>
           <p class="form-input-hint"
             *ngIf="expenseForm.get('fundAccount').errors && (expenseForm.get('fundAccount').dirty || expenseForm.get('fundAccount').touched)">
@@ -85,9 +74,6 @@
         <div class="columns">
           <div class="form-group column col-6"
             [class.has-error]="expenseForm.get('content').errors && (expenseForm.get('content').dirty || expenseForm.get('content').touched)">
-            <!-- <input class="form-input" type="text" name="content" placeholder="支出内容" #contentInputEle
-              [(ngModel)]="content"> -->
-            <!-- formControlName="content" -->
             <input class="form-input" type="text" formControlName="content" [(ngModel)]="expenseDetail.content"
               placeholder="支出内容" #contentInputEle>
             <p class="form-input-hint"
@@ -98,8 +84,6 @@
           <div class="column col-6"
             [class.has-error]="expenseForm.get('amount').errors && (expenseForm.get('amount').dirty || expenseForm.get('amount').touched)">
             <div class="input-group">
-              <!-- <input class="form-input" type="number" step="0.01" placeholder="支出金额" #amountInputEle name="amount"
-                #amountInputEle [(ngModel)]="amount"> -->
               <input class="form-input" formControlName="amount" [(ngModel)]="expenseDetail.amount" type="number"
                 step="0.01" placeholder="支出金额" #amountInputEle>
               <span class="input-group-addon">元</span>
